<resources>
    <string name="app_name">Cardiac Monitor</string>
</resources>